--- a/package.json
+++ b/package.json
@@ -1,28 +1,62 @@
 {
-  "name": "figma-export",
-  "version": "2.0.4",
-  "description": "A CLI tool to bulk export Figma and FigJam files",
+  "name": "figma-backup-automation",
+  "version": "1.0.0",
+  "description": "Professional Figma automated backup tool with cloud integration",
+  "main": "src/core/figma-backup.js",
   "scripts": {
     "postinstall": "playwright install chromium",
     "get-team-files": "node ./scripts/get-team-files.js",
     "get-project-files": "node ./scripts/get-project-files.js",
-    "start": "playwright test",
-    "retry": "playwright test --last-failed",
-    "dry-run": "playwright test --list",
-    "report": "playwright show-report"
+    "start": "node src/core/figma-backup.js",
+    "backup": "node src/core/figma-backup.js",
+    "setup": "node src/core/setup.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.js",
+    "lint:fix": "eslint src/**/*.js --fix",
+    "playwright:test": "playwright test",
+    "playwright:retry": "playwright test --last-failed",
+    "playwright:dry-run": "playwright test --list",
+    "playwright:report": "playwright show-report"
   },
-  "author": "Alex Chan",
+  "author": "Christian Wu <christian.wu@araizen.com>",
   "license": "MIT",
+  "keywords": [
+    "figma",
+    "backup",
+    "automation",
+    "dropbox",
+    "notion",
+    "obsidian",
+    "cli"
+  ],
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@types/node": "^20.12.12",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
-    "typescript-eslint": "^8.28.0"
+    "typescript-eslint": "^8.28.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "@playwright/test": "^1.44.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "axios": "^1.6.2",
+    "chalk": "^4.1.2",
+    "ora": "^5.4.1",
+    "fs-extra": "^11.2.0",
+    "node-notifier": "^10.0.1",
+    "dropbox": "^10.34.0",
+    "@notionhq/client": "^2.2.14",
+    "commander": "^11.1.0",
+    "inquirer": "^8.2.6",
+    "moment": "^2.29.4",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
+    "archiver": "^6.0.1",
+    "mime-types": "^2.1.35"
   },
   "engines": {
     "node": ">=20.18.1",
